# Poker-solver

./: Cargo.toml  README.md
crates/solver/: Cargo.toml
crates/solver/benches/: core_benches.rs
crates/solver/src/: lib.rs  main.rs
crates/solver/src/cards/: board.rs  card.rs  evaluator.rs  mod.rs
crates/solver/src/game/: mod.rs  state.rs
crates/solver/src/io/: config.rs  export.rs  mod.rs
crates/solver/src/ranges/: combo.rs  mod.rs  parser.rs
crates/solver/src/solver/: cfr.rs  mod.rs  stats.rs  tables.rs  utility.rs
crates/solver/src/tree/: compiler.rs  config.rs  mod.rs
crates/solver/tests/: cards_and_ranges.rs  chance_nodes.rs  solver_smoke.rs  tree_and_utility.rs
examples/: river_spot.json
