[package]
name = "poker_solver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "poker_solver"
path = "src/lib.rs"

[[bin]]
name = "poker-solver"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "core_benches"
harness = false
